--- a/package.json
+++ b/package.json
@@ -1,38 +1,59 @@
 {
-  "name": "bharathtransport",
+  "homepage": "bharathtransport",
+  "name": "altxmarketing.co",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+      "@emailjs/browser": "^4.3.3",
+      "@testing-library/jest-dom": "^5.17.0",
+      "@testing-library/react": "^13.4.0",
+      "@testing-library/user-event": "^13.5.0",
+      "@types/jest": "^27.5.2",
+      "@types/node": "^16.18.80",
+      "@types/react": "^18.2.55",
+      "@types/react-dom": "^18.2.19",
+      "axios": "^1.6.8",
+      "bootstrap": "^5.3.3",
+      "formik": "^2.4.5",
+      "gh-pages": "^6.1.1",
+      "react": "^18.2.0",
+      "react-bootstrap": "^2.10.1",
+      "react-dom": "^18.2.0",
+      "react-moment": "^1.1.3",
+      "react-multi-carousel": "^2.8.4",
+      "react-redux": "^9.1.0",
+      "react-router-dom": "^6.22.0",
+      "react-scripts": "5.0.1",
+      "react-scroll": "^1.9.0",
+      "redux": "^5.0.1",
+      "typescript": "^4.9.5",
+      "web-vitals": "^2.1.4",
+      "yup": "^1.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+      "start": "react-scripts start",
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+      "extends": [
+          "react-app",
+          "react-app/jest"
+      ]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+      "production": [
+          ">0.2%",
+          "not dead",
+          "not op_mini all"
+      ],
+      "development": [
+          "last 1 chrome version",
+          "last 1 firefox version",
+          "last 1 safari version"
+      ]
   }
 }
